[closes #3, closes #4] btn build is more visible + fixed modal size + fix translate msg

--- a/app/css/style.styl
+++ b/app/css/style.styl
@@ -115,11 +115,11 @@ $formWidth = 300px
     padding 8px 0px
     text-align center
     white-space normal
-    background-color #fff
-    color #333
+    background-color #333
+    color #fff
     border 1px solid #555
-    &:hover
-      background-color #333
+    &:hover, &:focus
+      background-color #555
       color #fff
   &__btnReset
     display block
